--- a/Web/css/style.css
+++ b/Web/css/style.css
@@ -2,7 +2,7 @@
 }
 
 body{
-    background-color: #fcffed;
+    background-color:#c8ffaa;
     color: #474041;
     font-family: Arial, Helvetica, sans-serif;
     
